--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.picdora"
     android:versionCode="1"
     android:versionName="1.0" >
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />    
+    
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -13,6 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <service android:name="net.frakbot.imageviewex.service.ImageViewExService"/>
         <activity
             android:name="com.picdora.MainActivity"
             android:label="@string/app_name" >
