--- a/library_projects/ImageViewEx-develop/project.properties
+++ b/library_projects/ImageViewEx-develop/project.properties
@@ -8,9 +8,8 @@
 # project structure.
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
-#proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+#proguard.config=${sdk.dir}\tools\proguard\proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=library_projects\\DataDroid
-android.library.reference.2=library_projects/ImageViewEx-develop
+target=android-18
+android.library=true
