--- a/library_projects/photo-viewer/project.properties
+++ b/library_projects/photo-viewer/project.properties
@@ -11,8 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=library_projects\\DataDroid
-android.library.reference.2=library_projects\\ImageViewEx-develop
-android.library.reference.3=library_projects/photo-viewer
-android.library.reference.4=library_projects/sprinkles
+target=android-18
+android.library=true
