Start work on channels

--- a/library_projects/photo-viewer/pom.xml
+++ b/library_projects/photo-viewer/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
-	<groupId>com.github.chrisbanes.photoview</groupId>
+
 	<artifactId>library</artifactId>
 	<packaging>jar</packaging>
 	<name>PhotoView Library</name>
@@ -10,7 +9,7 @@
 	<parent>
 		<groupId>com.github.chrisbanes.photoview</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.2.2</version>
+		<version>1.2.3-SNAPSHOT</version>
 	</parent>
 	
 	<dependencies>
