--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <service android:name="net.frakbot.imageviewex.service.ImageViewExService" />
 
         <activity
-            android:name="com.picdora.MainActivity"
+            android:name="com.picdora.ChannelViewActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:label="@string/app_name" >
             <intent-filter>
