--- a/library_projects/photo-viewer/AndroidManifest.xml
+++ b/library_projects/photo-viewer/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionCode="122"
     android:versionName="1.2.2-SHAPSHOT" >
 
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="19" />
 
-    <application android:hardwareAccelerated="true"/>
+    <application android:hardwareAccelerated="true" />
 
 </manifest>
