--- a/library_projects/photo-viewer/build.gradle
+++ b/library_projects/photo-viewer/build.gradle
@@ -1,18 +1,19 @@
 apply plugin: 'android-library'
 
-dependencies {
-  compile 'com.android.support:support-v4:18.0.+'
-}
-
 android {
-  compileSdkVersion 18
-  buildToolsVersion '18.0.1'
+    compileSdkVersion 19
+    buildToolsVersion '19.0.0'
 
-  sourceSets {
-    main {
-      manifest.srcFile 'AndroidManifest.xml'
-      java.srcDirs = ['src']
-      res.srcDirs = ['res']
+    defaultConfig {
+        minSdkVersion 4
+        targetSdkVersion 19
     }
-  }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            res.srcDirs = ['res']
+        }
+    }
 }
