--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,9 +21,8 @@
         <service android:name="net.frakbot.imageviewex.service.ImageViewExService" />
 
         <activity
-            android:name="com.picdora.ChannelViewActivity"
-            android:label="@string/app_name"
-             >
+            android:name="com.picdora.ChannelSelectionActivity_"
+            android:label="@string/title_activity_channel_selection" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,12 +30,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.picdora.ChannelCreationActivity"
-            android:label="@string/title_activity_channel_creation" >
+            android:name="com.picdora.ChannelViewActivity"
+            android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.picdora.ChannelSelectionActivity"
-            android:label="@string/title_activity_channel_selection" >
+            android:name="com.picdora.ChannelCreationActivity"
+            android:label="@string/title_activity_channel_creation" >
         </activity>
     </application>
 
