--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:targetSdkVersion="19" />
 
     <application
-        android:name="com.picdora.PicdoraApp"
+        android:name="com.picdora.PicdoraApp_"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
