--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 bin/
 gen/
 
+# Android annotations generated files
+.apt_generated/
+
 # Local configuration file (sdk path, etc)
 local.properties
 
