Add gif library

--- a/library_projects/android-gif-drawable-master/project.properties
+++ b/library_projects/android-gif-drawable-master/project.properties
@@ -12,6 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=library_projects/appcompat
-android.library.reference.2=library_projects/sprinkles
-android.library.reference.3=library_projects/android-gif-drawable-master
+android.library=true
