--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,8 @@
         </activity>
         <activity
             android:name="com.picdora.player.ChannelViewActivity_"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         </activity>
         <activity
             android:name="com.picdora.ChannelCreationActivity_"
