--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light" >
-        <service android:name="net.frakbot.imageviewex.service.ImageViewExService" />
+        android:theme="@style/PicdoraActionBarTheme" >
 
         <activity
             android:name="com.picdora.ChannelSelectionActivity_"
