--- a/library_projects/android-support-v4-preferencefragment/project.properties
+++ b/library_projects/android-support-v4-preferencefragment/project.properties
@@ -11,8 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=library_projects/appcompat
-android.library.reference.2=library_projects/sprinkles
-android.library.reference.3=library_projects/android-gif-drawable-master
-android.library.reference.4=library_projects/android-support-v4-preferencefragment
+target=android-18
+android.library=true
