--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,10 +35,10 @@
         <activity
             android:name="com.picdora.channelCreation.ChannelCreationActivity_"
             android:label="@string/title_activity_channel_creation"
-            android:parentActivityName="com.picdora.ChannelSelectionActivity_" >
+            android:parentActivityName="com.picdora.channelSelection.ChannelSelectionActivity_" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="om.picdora.ChannelSelectionActivity_" />
+                android:value="com.picdora.channelSelection.ChannelSelectionActivity_" />
         </activity>
         <activity
             android:name="com.picdora.player.ResumeActivity_"
