--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,5 @@ android.library.reference.1=library_projects/appcompat
 android.library.reference.2=library_projects/sprinkles
 android.library.reference.3=library_projects/android-gif-drawable-master
 android.library.reference.4=library_projects/android-support-v4-preferencefragment
+android.library.reference.5=library_projects/android-satellite-menu-master
+android.library.reference.6=library_projects/RoundedImageView-master
