--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/PicdoraActionBarTheme" >
+        <meta-data android:name="com.crashlytics.ApiKey" android:value="f8e89955ef243b240a3807307b94b382d9652601"/>
+        
         <activity
             android:name="com.picdora.channelSelection.ChannelSelectionActivity_"
             android:label="@string/title_activity_channel_selection" >
@@ -30,6 +32,14 @@
         <activity
             android:name="com.picdora.channelCreation.ChannelCreationActivity_"
             android:label="@string/title_activity_channel_creation"
+            android:parentActivityName="com.picdora.channelSelection.ChannelSelectionActivity_" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.picdora.channelSelection.ChannelSelectionActivity_" />
+        </activity>
+        <activity
+            android:name="com.picdora.channelDetail.ChannelDetailActivity_"
+            android:label="@string/title_activity_channel_detail"
             android:parentActivityName="com.picdora.channelSelection.ChannelSelectionActivity_" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -60,7 +70,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.crashlytics.ApiKey" android:value="f8e89955ef243b240a3807307b94b382d9652601"/>
+        
     </application>
 
 </manifest>
