--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:label="@string/title_activity_channel_selection" >
         </activity>
         <activity
-            android:name="com.picdora.player.ChannelViewActivity_"
+            android:name="com.picdora.channelPlayer.ChannelViewActivity_"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
         </activity>
@@ -46,7 +46,7 @@
                 android:value="com.picdora.channelSelection.ChannelSelectionActivity_" />
         </activity>
         <activity
-            android:name="com.picdora.player.ResumeActivity_"
+            android:name="com.picdora.channelPlayer.ResumeActivity_"
             android:label="@string/title_activity_resume" >
         </activity>
         <activity
