--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:label="@string/title_activity_resume" >
         </activity>
         <activity
-            android:name="com.picdora.settings.SettingsActivity"
+            android:name="com.picdora.settings.SettingsActivity_"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
