--- a/library_projects/sprinkles-master/build.gradle
+++ b/library_projects/sprinkles-master/build.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 dependencies {
-	compile 'com.android.support:support-v4:13.0.0'
+	compile 'com.android.support:support-v4:19.0.+'
 
     testCompile 'junit:junit:4.10'
     testCompile 'org.mockito:mockito-all:1.9.5'
@@ -24,7 +24,7 @@ dependencies {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.0.0'
+    buildToolsVersion '19.0.3'
 
     sourceSets {
         main {
