--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,13 +33,13 @@
             android:label="@string/title_activity_channel_selection" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.picdora.channelPlayer.ChannelViewActivity_"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.picdora.channelCreation.ChannelCreationActivity_"
